[tool.poetry]
name = "bond-controller-action"
version = "1.0.1"
description = ""
authors = ["jeremy <jeremy@teamt5.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
paramiko = "^3.4.0"
pytest = "^7.2.1"
pillow = "^9.5.0"
black = "^23.3.0"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
