[tool.poetry]
name = "bond-controller-action"
version = "2.0.0"
description = ""
authors = ["jeremy <jeremy@teamt5.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.0"
paramiko = "^3.4.0"
pytest = "^7.2.1"
pillow = "^10.3.0"
black = "^24.3.0"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
